# fty

./: .clang-format  .clang-tidy  .gitignore  .travis.yaml  .travis.yml  AUTHORS.txt  CMakeLists.txt  LICENSE  README.md  converter.cpp  fty.hpp
.github/workflows/: format.yml  reuse.yml  tests.yml  tidy.yml
cmake/: testing.cmake
example/: parameters.par
include/: BlockParser.hpp  BlockProcessor.hpp  Fty.hpp  FtyDataTypes.hpp  FtyExceptions.hpp  FtyInternals.hpp  FtyPolicies.hpp  StringProcessor.h  StringProcessor.hpp  fty.h
lib/: CMakeLists.txt  FtyBlockParsing.cpp  FtyBlockProcessing.cpp  FtyIO.cpp  FtyInternals.h  FtyLoader.cpp  FtyStringProcessing.cpp
test/: BlockFilters.t.h  BlockFinder.t.h  CMakeLists.txt  LineChecker.t.h  StringProcessorTest.cpp
tests/: BlockParserTest.cpp  BlockProcessorTest.cpp  CMakeLists.txt  PolicyTest.cpp  StringProcessorTest.cpp  helper.cpp  helper.hpp  main.cpp
